real time feature added
